feat: ticket management
